--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
     cia = commit -v --amend
     co = checkout
     cb = checkout -b
+    cp = cherry-pick
     di = diff
     ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
     ld = log --pretty=format:"%C(yellow)%h\\ %C(green)%ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short --graph
