--- a/.gitconfig
+++ b/.gitconfig
@@ -18,9 +18,9 @@
     co = checkout
     cop = checkout --patch
     cp = cherry-pick
-    di = diff
+    df = diff
     dc = diff --cached
-    dl = diff HEAD~1
+    dh = diff HEAD~1
     ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
     ld = log --pretty=format:"%C(yellow)%h\\ %C(green)%ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short --graph
     ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
