--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,17 @@
-# remap prefix to Control + a
-set -g prefix C-a
-# bind 'C-a C-a' to type 'C-a'
-bind C-a send-prefix
 unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# stay in the current working directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Neovim recommends the below `escape` time setting
+set -sg escape-time 10
+set -g default-terminal "tmux-256color"
+#set -g default-terminal "tmux-256color" # use custom compiled terminfo file
+#set-option -sa terminal-overrides ',xterm*:Tc' # enable 24 bit color
+#
+set -g history-limit 20000
+
