feat: tmux for nvim osc52 and smart-split

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,11 +7,29 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Use v to trigger selection    
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Use y to yank current selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # Neovim recommends the below `escape` time setting
 set -sg escape-time 10
 set -g default-terminal "tmux-256color"
+set -as terminal-features ',tmux-256color:clipboard'
 #set -g default-terminal "tmux-256color" # use custom compiled terminfo file
 #set-option -sa terminal-overrides ',xterm*:Tc' # enable 24 bit color
 #
 set -g history-limit 20000
+set-option -g default-shell /bin/zsh
+set -s set-clipboard on
 
+bind-key -n C-Left select-pane -L
+bind-key -n C-Down select-pane -D
+bind-key -n C-Up select-pane -U
+bind-key -n C-Right select-pane -R
+
+bind-key -n M-Left resize-pane -L 3
+bind-key -n M-Down resize-pane -D 3
+bind-key -n M-Up resize-pane -U 3
+bind-key -n M-Right resize-pane -R 3
