--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = .config/nvim
   url = https://github.com/ui-HookeyChiang/nvim
   branch = dev
+[submodule ".config/tmux"]
+	path = .config/tmux
+	url = https://github.com/gpakosz/.tmux
