--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
     name = ui-HookeyChiang
     email = hookey.chiang@ui.com
-    ; signingkey = /home/hookey/.ssh/id_ed25519.pub
+	  signingkey = ~/.ssh/id_ed25519.pub
 [core]
     editor = nvim
 [commit]
@@ -56,3 +56,5 @@
     insteadOf = https://github.com/
 [gpg]
     format = ssh
+[gpg "ssh"]
+  	allowedSignersFile = ~/.git_allowed_signers
