--- a/.gitconfig
+++ b/.gitconfig
@@ -57,4 +57,6 @@
 [gpg]
     format = ssh
 [gpg "ssh"]
-  	allowedSignersFile = ~/.git_allowed_signers
+    allowedSignersFile = ~/.git_allowed_signers
+[tag]
+    gpgsign = true
