--- a/.gitconfig
+++ b/.gitconfig
@@ -24,6 +24,7 @@
     cp = cherry-pick
     cpa = cherry-pick --abort
     cpc = cherry-pick --continue
+    cps = cherry-pick --skip
     df = diff
     dc = diff --cached
     dh = diff HEAD~1
@@ -31,12 +32,13 @@
     ld = log --pretty=format:"%C(yellow)%h\\ %C(green)%ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short --graph
     ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
     mm = merge --no-ff
-    pu = push --tags
+    pu = push --follow-tags
     pur = pull --rebase
     re = rebase
     rea = rebase --abort
     rec = rebase --continue
     rei = rebase -i
+    res = rebase --skip
     st = status --short --branch
     sh = stash
     shk = stash --keep-index
