--- a/.gitconfig
+++ b/.gitconfig
@@ -44,6 +44,7 @@
     shk = stash --keep-index
     shp = stash pop
     tg = tag -a
+    td = tag --delete
     un = reset --hard HEAD
     uh = reset --hard HEAD^
 [color]
