--- a/.gitconfig
+++ b/.gitconfig
@@ -34,8 +34,10 @@
     lp = log -p
     ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
     mm = merge --no-ff
-    pu = push --follow-tags
+    puo = push origin
     pur = pull --rebase
+    put = push --follow-tags
+    puu = push -u origin HEAD
     re = rebase
     rea = rebase --abort
     rec = rebase --continue
