feat: enhance git aliases with more reset options
- Add reset variations (hard, soft, keep)
- Rename 'st' to 's' for shorter status
- Keep 'st' for verbose status
- Rename 'tg' to 'ta' for tag creation

--- a/.gitconfig
+++ b/.gitconfig
@@ -43,11 +43,16 @@
     rec = rebase --continue
     rei = rebase -i
     res = rebase --skip
-    st = status --short --branch
+    rhh = reset --hard HEAD
+    rhl = reset --hard HEAD^
+    rhk = reset --keep HEAD
+    rhs = reset --soft HEAD
+    s = status --short --branch
+    st = status --branch
     sh = stash
     shk = stash --keep-index
     shp = stash pop
-    tg = tag -a
+    ta = tag -a
     td = tag --delete
     un = reset --hard HEAD
     uh = reset --hard HEAD^
